--- a/input.css
+++ b/input.css
@@ -4,33 +4,34 @@
   --font-sans: "Inter", sans-serif;
 }
 
-/* --- Local Fonts --- */
+/* --- Local Fonts (Updated Paths: pointing to ./Inter/ folder) --- */
+
 @font-face {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
-  src: url('file:///C:/Users/mewei/Fonts/Inter/Inter-Regular.ttf') format('truetype');
+  src: url('./Inter/Inter-Regular.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
-  src: url('file:///C:/Users/mewei/Fonts/Inter/Inter-Medium.ttf') format('truetype');
+  src: url('./Inter/Inter-Medium.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 600;
-  src: url('file:///C:/Users/mewei/Fonts/Inter/Inter-SemiBold.ttf') format('truetype');
+  src: url('./Inter/Inter-SemiBold.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
-  src: url('file:///C:/Users/mewei/Fonts/Inter/Inter-Bold.ttf') format('truetype');
+  src: url('./Inter/Inter-Bold.ttf') format('truetype');
 }
 
 /* --- Custom Components --- */
@@ -72,7 +73,6 @@
 }
 
 /* --- Viewer Specific Styles --- */
-/* These use standard CSS syntax, which works fine in v4 */
 
 .prose ul { list-style-type: disc; padding-left: 1.5em; margin: 0.5em 0; }
 .prose ol { list-style-type: decimal; padding-left: 1.5em; margin: 0.5em 0; }
